Modelos y configuración del DbContext

--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using SuperMarketWEB
-@namespace SuperMarketWEB.Pages
+﻿@using SupermarketWEB
+@namespace SupermarketWEB.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
